fix dark mode highlight/emphasis color

--- a/day2/stylesheet.css
+++ b/day2/stylesheet.css
@@ -62,7 +62,7 @@
 }
 
 .box-dark .emphasis {
-    background-color: rgba(63, 6, 44, 0.24);
+    background-color: rgba(255, 107, 206, 0.24);
 }
 
 .box-dark a {
